# evolution2

./: .gitignore  README.md  pyproject.toml
configs/: tau_retail_nomem.yaml  tau_retail_nt_memevo_candidate.yaml  tau_retail_nt_memevo_gate.yaml  tau_retail_phase2_official_tau2_action_replay.yaml  tau_retail_phase2_official_tau2_action_replay_scan10.yaml  tau_retail_phase2_official_tau2_nomem.yaml  tau_retail_phase2_official_tau2_raw_trace_rag.yaml  tau_retail_phase2_official_tau2_real_actor_nomem.yaml  tau_retail_phase2_official_tau2_real_actor_nomem_scan3.yaml  tau_retail_phase2_official_tau2_real_actor_raw_trace_rag_scan3.yaml  tau_retail_phase2_state_nomem.yaml  tau_retail_phase2_state_raw_trace_rag.yaml  tau_retail_raw_trace_rag.yaml  tau_retail_real_nomem.yaml  tau_retail_real_raw_trace_rag.yaml  tau_retail_reflexion.yaml  tiny_nomem.yaml  tiny_nt_memevo_candidate.yaml  tiny_nt_memevo_gate.yaml  tiny_nt_memevo_gate_polluted.yaml  tiny_nt_memevo_gate_refine.yaml  tiny_nt_memevo_gate_repeated.yaml  tiny_nt_memevo_gate_replay.yaml  tiny_nt_memevo_gate_unsafe_polluted.yaml  tiny_nt_memevo_gate_verify.yaml  tiny_raw_trace_rag.yaml  tiny_reflexion.yaml
data/memory_fixtures/: tiny_polluted_candidates.jsonl
data/task_splits/: tau_retail_export_sample_tasks.py  tau_retail_phase2_state_tasks.py  tiny_tool_tasks.json  (+6 more)
docs/: coding_log.md  experiment_log.md  negative_transfer_memory_self_evolution_roadmap.md  tau_retail_export_schema.md
scripts/: start_vllm_qwen35_9b.sh
tests/: test_llm_client.py  test_react_agent.py  test_tau_bench_adapter.py  test_tiny_pipeline.py
(+36 files in other folders)
